--- a/WpfCritic/WpfCritic/View/EntertainmentDetailsWindow.xaml
+++ b/WpfCritic/WpfCritic/View/EntertainmentDetailsWindow.xaml
@@ -5,12 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfCritic.View"
         mc:Ignorable="d"
-        Title="Деталі контента" Height="471.872" Width="863.745">
+        Title="Деталі контента" Height="471.872" Width="1001.745" MinHeight="471.872" MinWidth="1001.745">
     <ScrollViewer VerticalScrollBarVisibility="Auto">
         <Grid Background="AliceBlue">
             <Grid Margin="4,8,4,8">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
@@ -49,70 +48,37 @@
                         <TextBlock Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" Text="{Binding Company}" />
                         <Label Grid.Column="0" Grid.Row="3" Content="Головна мова:" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" FontWeight="Bold" />
                         <TextBlock Grid.Column="1" Grid.Row="3" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" Text="{Binding MainLanguage}" />
-                        <Label Grid.Column="0" Grid.Row="4" Content="Віковий ценз:" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" FontWeight="Bold" />
-                        <TextBlock Grid.Column="1" Grid.Row="4" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" Text="{Binding Rating}" />
-                        <Label Grid.Column="0" Grid.Row="5" Content="Коментар до вікового цензу:" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" FontWeight="Bold" />
-                        <TextBlock Grid.Column="1" Grid.Row="5" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" Text="{Binding RatingComment}" />
-                        <Label Grid.Column="0" Grid.Row="6" Content="Тривалість (хв):" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" FontWeight="Bold" />
-                        <TextBlock Grid.Column="1" Grid.Row="6" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" Text="{Binding MovieRuntimeMinute}" />
-                        <Label Grid.Column="0" Grid.Row="7" Content="Офіційний сайт:" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" FontWeight="Bold" />
-                        <TextBlock Grid.Column="1" Grid.Row="7" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" Text="{Binding OfficialSite}" />
-                        <Label Grid.Column="0" Grid.Row="8" Content="Країни:" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" FontWeight="Bold" />
-                        <TextBlock Grid.Column="1" Grid.Row="8" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" Text="{Binding MovieCountries}" />
-                        <Label Grid.Column="0" Grid.Row="9" Content="Сезон:" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" FontWeight="Bold" />
-                        <TextBlock Grid.Column="1" Grid.Row="9" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" Text="{Binding TVSeason}" />
-                        <Label Grid.Column="0" Grid.Row="10" Content="Бюджет:" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" FontWeight="Bold" />
-                        <TextBlock Grid.Column="1" Grid.Row="10" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" Text="{Binding Budget}" />
+                        <Label Grid.Column="0" Grid.Row="4" Content="Віковий ценз:" Visibility="{Binding RatingVisibility}" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" FontWeight="Bold" />
+                        <TextBlock Grid.Column="1" Grid.Row="4" Visibility="{Binding RatingVisibility}" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" Text="{Binding Rating}" />
+                        <Label Grid.Column="0" Grid.Row="5" Content="Коментар до вікового цензу:" Visibility="{Binding RatingCommentVisibility}" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" FontWeight="Bold" />
+                        <TextBlock Grid.Column="1" Grid.Row="5" Visibility="{Binding RatingCommentVisibility}" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" TextWrapping="Wrap" Text="{Binding RatingComment}" />
+                        <Label Grid.Column="0" Grid.Row="6" Content="Тривалість (хв):" Visibility="{Binding MovieRuntimeMinuteVisibility}" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" FontWeight="Bold" />
+                        <TextBlock Grid.Column="1" Grid.Row="6" Visibility="{Binding MovieRuntimeMinuteVisibility}" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" Text="{Binding MovieRuntimeMinute}" />
+                        <Label Grid.Column="0" Grid.Row="7" Content="Офіційний сайт:" Visibility="{Binding OfficialSiteVisibility}" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" FontWeight="Bold" />
+                        <TextBlock Grid.Column="1" Grid.Row="7" Visibility="{Binding OfficialSiteVisibility}" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16">
+                            <Hyperlink NavigateUri="{Binding OfficialSite}" RequestNavigate="RequestNavigate">перейти</Hyperlink>
+                        </TextBlock>
+                        <Label Grid.Column="0" Grid.Row="8" Content="Країни:" Visibility="{Binding MovieCountriesVisibility}" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" FontWeight="Bold" />
+                        <TextBlock Grid.Column="1" Grid.Row="8" Visibility="{Binding MovieCountriesVisibility}" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" Text="{Binding MovieCountries}" />
+                        <Label Grid.Column="0" Grid.Row="9" Content="Сезон:" Visibility="{Binding TVSeasonVisibility}" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" FontWeight="Bold" />
+                        <TextBlock Grid.Column="1" Grid.Row="9" Visibility="{Binding TVSeasonVisibility}" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" Text="{Binding TVSeason}" />
+                        <Label Grid.Column="0" Grid.Row="10" Content="Бюджет:" Visibility="{Binding BudgetVisibility}" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" FontWeight="Bold" />
+                        <TextBlock Grid.Column="1" Grid.Row="10" Visibility="{Binding BudgetVisibility}" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" Text="{Binding Budget}" />
                     </Grid>
                 </Grid>
+                
                 <StackPanel Grid.Row="1">
-                    <TextBlock HorizontalAlignment="Center" FontFamily="Rockwell Extra Bold" FontSize="16">
-                        <Hyperlink NavigateUri="{Binding BuyLink}">Придбати зараз!</Hyperlink>
+                    <TextBlock Visibility="{Binding BuyLinkVisibility}"  HorizontalAlignment="Center" FontFamily="Rockwell Extra Bold" FontSize="16">
+                        <Hyperlink NavigateUri="{Binding BuyLink}" RequestNavigate="RequestNavigate">Придбати зараз!</Hyperlink>
                     </TextBlock>
-                    
+                    <Label Content="Опис:" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" FontWeight="Bold" />
+                    <TextBlock Margin="4,0,0,4" Text="{Binding Summary}" TextWrapping="Wrap" FontFamily="Times New Roman" FontSize="16"  />
                 </StackPanel>
-                <Grid Grid.Row="2" Margin="0,2,0,0" Background="#FF00167C" >
+                <Grid Grid.Row="2" Visibility="{Binding TrailerVisibility}" Margin="0,2,0,0" Background="#FF00167C" >
                     <Label Content="TRAILER" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="Impact" FontSize="21.333" Foreground="White" />
                 </Grid>
-                <Grid Grid.Row="3" Width="600" Height ="500">
-                    <MediaElement Name="trailer" Width="600" Height ="500" LoadedBehavior="Manual" UnloadedBehavior="Manual" Source="{Binding Trailer}" />
-                    <Button Name="playCenterButton" Height="130" Width="180" VerticalAlignment="Center" HorizontalAlignment="Center" Canvas.ZIndex="1" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="{x:Null}" Click="playCenterButton_Click">
-                        <Image Name="playCenterImg" Source="C:\Users\max\Documents\Visual Studio 2015\Projects\WpfCritic\WpfCritic\Assets\button_play.png" />
-                    </Button>
-                </Grid>
-                <StackPanel Grid.Row="4" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Top">
-                    <Button Name="playDownButton" Margin="0,0,2,0" MinWidth="50" Content="PLAY" Height="50" Width="100" Click="playDownButton_Click" FontFamily="Impact" FontSize="16" >
-                        <Button.Template>
-                            <ControlTemplate  TargetType="Button">
-                                <Grid>
-                                    <Ellipse Fill="#FF00167C" MouseEnter="Ellipse_MouseEnter" MouseLeave="Ellipse_MouseLeave" />
-                                    <Label Content="{TemplateBinding Content}" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" />
-                                </Grid>
-                            </ControlTemplate>
-                        </Button.Template>
-                    </Button>
-                    <Button Name="pauseButton" Margin="0,0,2,0" MinWidth="50" Content="PAUSE" Height="50" Width="100" FontFamily="Impact" FontSize="16" Click="pauseButton_Click">
-                        <Button.Template>
-                            <ControlTemplate  TargetType="Button">
-                                <Grid>
-                                    <Ellipse Fill="#FF00167C" MouseEnter="Ellipse_MouseEnter" MouseLeave="Ellipse_MouseLeave" />
-                                    <Label Content="{TemplateBinding Content}" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" />
-                                </Grid>
-                            </ControlTemplate>
-                        </Button.Template>
-                    </Button>
-                    <Button Name="stopButton" MinWidth="50" Content="STOP" Height="50" Width="100" FontFamily="Impact" FontSize="16" Click="stopButton_Click">
-                        <Button.Template>
-                            <ControlTemplate  TargetType="Button">
-                                <Grid>
-                                    <Ellipse Fill="#FF00167C" MouseEnter="Ellipse_MouseEnter" MouseLeave="Ellipse_MouseLeave" />
-                                    <Label Content="{TemplateBinding Content}" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" />
-                                </Grid>
-                            </ControlTemplate>
-                        </Button.Template>
-                    </Button>
-                </StackPanel>
-                <StackPanel Grid.Row="5" Orientation="Horizontal" HorizontalAlignment="Right">
+                <WebBrowser Grid.Row="3" Margin="4,8,4,8" Visibility="{Binding TrailerVisibility}" Name ="YoutubeVideo" Height="400" Width="600" />
+                <StackPanel Grid.Row="4" Orientation="Horizontal" HorizontalAlignment="Right">
                     <Button Name="cancelButton" Margin="4, 2, 0, 0" Padding="4,2,4,2" MinWidth="50" Content="Cancel" Click="cancelButton_Click" />
                 </StackPanel>
             </Grid>
