--- a/WpfCritic/WpfCritic/View/EntertainmentDetailsWindow.xaml
+++ b/WpfCritic/WpfCritic/View/EntertainmentDetailsWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfCritic.View"
         mc:Ignorable="d"
-        Title="Деталі контента" Height="471.872" Width="1001.745" MinHeight="471.872" MinWidth="1001.745">
+        Title="Деталі контента" Height="471.872" Width="1001.745" MinHeight="471.872" MinWidth="1001.745" Closing="Window_Closing">
     <ScrollViewer VerticalScrollBarVisibility="Auto">
         <Grid Background="AliceBlue">
             <Grid Margin="4,8,4,8">
@@ -79,7 +79,7 @@
                 </Grid>
                 <WebBrowser Grid.Row="3" Margin="4,8,4,8" Visibility="{Binding TrailerVisibility}" Name ="YoutubeVideo" Height="400" Width="600" />
                 <StackPanel Grid.Row="4" Orientation="Horizontal" HorizontalAlignment="Right">
-                    <Button Name="cancelButton" Margin="4, 2, 0, 0" Padding="4,2,4,2" MinWidth="50" Content="Cancel" Click="cancelButton_Click" />
+                    <Button Name="cancelButton" Margin="4, 2, 0, 0" Padding="4,2,4,2" MinWidth="50" Content="Закрити" Click="cancelButton_Click" />
                 </StackPanel>
             </Grid>
         </Grid>
