--- a/WpfCritic/WpfCritic/View/EditOrAddEntertainmentWindow.xaml
+++ b/WpfCritic/WpfCritic/View/EditOrAddEntertainmentWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfCritic.View"
         xmlns:wpfToolkit="clr-namespace:Xceed.Wpf.Toolkit;assembly=Xceed.Wpf.Toolkit"
+        xmlns:sys="clr-namespace:System;assembly=mscorlib"
         mc:Ignorable="d"
         Title="Контент" Height="683.83" Width="713.17">
     <Grid Background="AliceBlue">
@@ -102,7 +103,11 @@
                 <Label Grid.Row="16" Grid.Column="0" Content="Бюджет ($):" FontFamily="Times New Roman" FontSize="16" FontWeight="Bold" HorizontalAlignment="Left" VerticalAlignment="Center" />
                 <wpfToolkit:DecimalUpDown Grid.Row="16" Grid.Column="2" Grid.ColumnSpan="2" Value="{Binding Budget}" FormatString="F2" Increment="100000" Minimum=".01" />
                 <Label Grid.Row="17" Grid.Column="0" Content="Посилання на трейлер:" Visibility="{Binding TrailerLinkVisibility}" FontFamily="Times New Roman" FontSize="16" FontWeight="Bold" HorizontalAlignment="Left" VerticalAlignment="Center" />
-                <wpfToolkit:MaskedTextBox Grid.Row="17" Grid.Column="2" Grid.ColumnSpan="2" Text="{Binding TrailerLink}" Mask="https\:\/\/www\.youtube\.com\/w\atch\?v\=&amp;&amp;&amp;&amp;&amp;&amp;&amp;&amp;&amp;&amp;&amp;"  Visibility="{Binding TrailerLinkVisibility}" />
+                <Grid Grid.Row="17" Grid.Column="1" ToolTip="Посилання на youtube повинно містити 11 символів після '=' або бути порожнім!" Visibility="{Binding TrailerLinkErrorVisibility}" Margin="2,0,2,0">
+                    <Ellipse Height="20" Width="20" Fill="#FFFD0000" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                    <Label Content="!" Foreground="White" VerticalAlignment="Center" HorizontalAlignment="Center" FontWeight="Bold" FontSize="13.333" />
+                </Grid>
+                <wpfToolkit:MaskedTextBox Grid.Row="17" Grid.Column="2" Grid.ColumnSpan="2" Value="{Binding TrailerLink}" ValueDataType="{x:Type sys:String}" Mask="https\:\/\/www\.youtube\.com\/w\atch\?v\=CCCCCCCCCCC"  Visibility="{Binding TrailerLinkVisibility}" />
             </Grid>
             <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
                 <Button Name="okButton" Margin="4, 2, 0, 0" Padding="4,2,4,2" MinWidth="50" Content="OK" Click="okButton_Click" />
